commit#27 fix style.css ajout d'une image de background redimensionner pour version mobile et définition du media queries mobile pour avoir l'image plus petite en version mobile

--- a/style.css
+++ b/style.css
@@ -818,11 +818,17 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere-min.jpg");
+    background-image: url("img/agence-la-panthee-min.jpg");
 }
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.jpeg");
+}
+
+@media (max-width: 767) {
+    .bg-banniere{
+        background-image: url("img/agence-la-panthere-min-mobile.jpg");
+    }
 }
 
 @media (max-width: 1024px) {
